maybe fix overflow y scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,8 @@ body.dark-theme {
     padding: 15px 20px;
     top: 0;
     overflow-x: hidden;
-
+    overflow-y: hidden;
+    
     /* Fonts */
     font-family: sans-serif;
     font-size: 20px;
